@@ -1,0 +1,6 @@
+*.o
+*.d
+*.exe
+*.coff
+*.sym
+*.map
